[tool.poetry]
name = "nominator-track"
version = "0.1.0"
description = ""
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyee = "^7.0.2"
authlib = "^0.14.3"
httpx = "^0.14.1"
beautifulsoup4 = "^4.9.1"
discord-py = "^1.4.1"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
